# CrossFit-rs

./: .gitignore  Cargo.toml  Makefile
src/: main.rs
src/dao/: course_dao.rs  mod.rs  order_dao.rs  schedule_dao.rs  teacher_dao.rs  user_dao.rs
src/entities/: courses.rs  mod.rs  orders.rs  prelude.rs  schedules.rs  teachers.rs  users.rs
src/route/: mod.rs
src/route/handler/: courses.rs  mod.rs  orders.rs  schedules.rs  teachers.rs  users.rs
src/tui/: table.rs
