[package]
name = "p2159-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
futures = "0.3.7"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }  # tokio 的全功能支持
axum = { version = "0.7.5" }
tracing-subscriber = "0.3.18"
clap = "2.33.3"
tracing = "0.1.40"
ratatui = "0.28.1"
crossterm = "0.28.1"


